compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__multiple_discarded_args_in_external_are_passed_correctly_2.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"wibble\", \"wobble\")\npub fn woo(__: a, _two: b) -> Nil\n"
---
----- SOURCE CODE

@external(erlang, "wibble", "wobble")
pub fn woo(__: a, _two: b) -> Nil


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([woo/2]).

-file("/root/project/test/my/mod.rakun", 3).
-spec woo(any(), any()) -> nil.
woo(Argument, _two) ->
    wibble:wobble(Argument, _two).
