compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__no_type_annotation_for_parameter.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: Int, y) -> Int {\n  todo\n}\n"
---
----- SOURCE CODE

@external(erlang, "one", "one")
pub fn one(x: Int, y) -> Int {
  todo
}


----- ERROR
error: Missing type annotation
  ┌─ /src/one/two.rakun:3:20
  │
3 │ pub fn one(x: Int, y) -> Int {
  │                    ^

A parameter annotation is missing from this function.

Functions with external implementations must have type annotations
so we can tell what type of values they accept and return.
