compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__private.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 233
expression: "\npub fn main() {\n  do()\n}\n\n@external(erlang, \"library\", \"main\")\nfn do() -> Int\n"
---
----- SOURCE CODE

pub fn main() {
  do()
}

@external(erlang, "library", "main")
fn do() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> integer().
main() ->
    library:main().
