compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__private_external_function_calls.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"m\", \"f\")\nfn go(x x: Int, y y: Int) -> Int\n\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
---
----- SOURCE CODE

@external(erlang, "m", "f")
fn go(x x: Int, y y: Int) -> Int

pub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([x/0]).

-file("/root/project/test/my/mod.rakun", 5).
-spec x() -> integer().
x() ->
    m:f(1, 2),
    m:f(4, 3).
