compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__private_local_function_references.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"m\", \"f\")\nfn go(x: Int, y: Int) -> Int\npub fn x() { go }\n"
---
----- SOURCE CODE

@external(erlang, "m", "f")
fn go(x: Int, y: Int) -> Int
pub fn x() { go }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([x/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec x() -> fun((integer(), integer()) -> integer()).
x() ->
    fun m:f/2.
