compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__public_elixir.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"Elixir.String\", \"main\")\npub fn do() -> Int\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([do/0]).

-file("/root/project/test/my/mod.rakun", 3).
-spec do() -> integer().
do() ->
    'Elixir.String':main().
