compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__public_local_function_calls.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"m\", \"f\")\npub fn go(x x: Int, y y: Int) -> Int\nfn x() { go(x: 1, y: 2) go(y: 3, x: 4) }\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/2]).

-file("/root/project/test/my/mod.rakun", 3).
-spec go(integer(), integer()) -> integer().
go(X, Y) ->
    m:f(X, Y).

-file("/root/project/test/my/mod.rakun", 4).
-spec x() -> integer().
x() ->
    m:f(1, 2),
    m:f(4, 3).
