compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__unqualified_inlining_external_functions_from_another_module.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 84
expression: "import atom.{make}\npub fn main() {\n  make(\"ok\")\n}\n"
---
----- SOURCE CODE
import atom.{make}
pub fn main() {
  make("ok")
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> binary().
main() ->
    erlang:binary_to_atom(<<"ok"/utf8>>).
